<resources>
    <string name="app_name">Weather</string>
    <string name="settings_page_title">Settings</string>
    <string name="nextweek_forecast_subtitle">Next Week</string>
    <string name="today_weather_subtitle">Today</string>
    <string name="feels_like_temp">Feels like</string>
    <string name="percipitation">Percipitation</string>
    <string name="wind">Wind</string>
    <string name="visibility">Visibility</string>
    <string name="please_set_location">Please, set location manually in settings</string>
    <string name="menu_today">Today</string>
    <string name="menu_7_days">7 Days</string>
    <string name="menu_settings">Settings</string>
    <string name="preference_weather_location">Weather Location</string>
    <string name="preference_use_device_location">Use device location</string>
    <string name="preference_allow_app_location">Allow the app to get your location</string>
    <string name="preference_location">Location</string>
    <string name="preference_location_summary">The location for witch the weather is displayed</string>
    <string name="preference_unit_system">Unit System</string>
    <string name="preference_info_development">App still in development. Bugs may appear!</string>
</resources>
