<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
        <PreferenceCategory
                android:title="@string/preference_weather_location">
                <SwitchPreference
                        android:key="USE_DEVICE_LOCATION"
                        android:title="@string/preference_use_device_location"
                        android:summary="@string/preference_allow_app_location"
                        android:defaultValue="true"
                        android:disableDependentsState="true"/>

                <EditTextPreference
                        android:key="CUSTOM_LOCATION"
                        android:title="@string/preference_location"
                        android:summary="@string/preference_location_summary"
                        android:defaultValue="Warszawa"
                        android:dependency="USE_DEVICE_LOCATION"/>
        </PreferenceCategory>
        <PreferenceCategory
                android:title="@string/preference_unit_system">
                <ListPreference
                        android:key="UNIT_SYSTEM"
                        android:title="@string/preference_unit_system"
                        android:summary="%s"
                        android:defaultValue="METRIC"
                        android:entries="@array/unitSystemEntries"
                        android:entryValues="@array/unitSystemValues"/>
        </PreferenceCategory>
        <PreferenceCategory>
                <Preference
                        android:icon="@drawable/ic_info"
                        android:summary="@string/preference_info_development"/>
                <Preference
                        android:key="APP_VERSION"
                        android:summary="App version: "/>
        </PreferenceCategory>
</PreferenceScreen>